# TaskManager

./: .gitlab-ci.yml  CMakeLists.txt  README.md  TaskManager.cpp  TaskManager.hpp  main.cpp  task.txt  test.cpp
.github/workflows/: main.yml
src/: TaskManager.cpp
